--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,19 +23,29 @@ dependencies = [
     "bs4",
     "openai",
     "ipykernel",
+    "tensorflow",
+    "numpy",
+    "transformers",
 ]
-requires-python = "~=3.13.0"
+requires-python = "~=3.12.0"
 
 
 [tool.ruff]
 line-length = 99
 src = ["src"]
-include = ["pyproject.toml", "src/**/*.py", "notebook/**/*.ipynb"]
+include = ["pyproject.toml", "src/**/*.py", "notebooks/**/*.ipynb"]
 
 [tool.ruff.lint]
 extend-select = ["I"]  # Add import sorting
 
 [tool.ruff.lint.isort]
-known-first-party = ["src", "notebook"]
+known-first-party = ["src", "notebooks"]
 force-sort-within-sections = true
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = 88  # For code blocks in notebook markdown cells
+
+[tool.ruff.lint.per-file-ignores]
+"notebooks/**/*.ipynb" = ["E402", "I001"]  # Ignore import order in notebooks
 
