--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,10 @@
-python-dotenv
-jupyterlab
-ipywidgets
+pip
+awscli
 requests
-numpy
-pandas
-scipy
-scikit-learn
-matplotlib
-gensim
-torch
-transformers
-tqdm
+dotenv
+bs4
 openai
-gradio
-langchain
-tiktoken
-faiss-cpu
-langchain-openai
-langchain_experimental
-langchain_chroma
-langchain[docarray]
-datasets
-sentencepiece
-matplotlib
-google-generativeai
-anthropic
-scikit-learn
-unstructured
-chromadb
-plotly
-jupyter-dash
-beautifulsoup4
-pydub
-modal
-ollama
-accelerate
-sentencepiece
-bitsandbytes
-psutil
-setuptools
-speedtest-cli
-sentence_transformers
-feedparser
+ipykernel
+tensorflow
+numpy
+transformers
